--- a/django-backend/requirements.txt
+++ b/django-backend/requirements.txt
@@ -1,5 +1,9 @@
+amqp==1.4.9
+anyjson==0.3.3
 attrs==16.0.0
 beautifulsoup4==4.4.1
+billiard==3.3.0.23
+celery==3.1.18
 cffi==1.6.0
 cryptography==1.4
 cssselect==0.9.1
@@ -11,6 +15,7 @@ enum34==1.1.6
 gunicorn==19.6.0
 idna==2.1
 ipaddress==1.0.16
+kombu==3.0.35
 lxml==3.6.0
 parsel==1.0.2
 pdfminer==20140328
@@ -23,7 +28,9 @@ pycurl==7.43.0
 PyDispatcher==2.0.5
 Pygments==2.1.3
 pyOpenSSL==16.0.0
+pytz==2016.4
 queuelib==1.4.2
+redis==2.10.3
 requests==2.10.0
 Scrapy==1.1.0
 service-identity==16.0.0
