--- a/rails_frontend/config/database.yml
+++ b/rails_frontend/config/database.yml
@@ -29,6 +29,10 @@ test:
   <<: *default
   database: db/test.sqlite3
 
-production:
-  <<: *default
-  database: db/production.sqlite3
+development:
+  adapter: postgresql
+  encoding: unicode
+  database: grants
+  pool: 5
+  username: jeff
+  password: airjeff
