--- a/rails_frontend/config/database.yml
+++ b/rails_frontend/config/database.yml
@@ -29,7 +29,7 @@ test:
   <<: *default
   database: db/test.sqlite3
 
-development:
+production:
   adapter: postgresql
   encoding: unicode
   database: grants
