--- a/rails_frontend/config/database.yml
+++ b/rails_frontend/config/database.yml
@@ -26,8 +26,12 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: grantstest
+  pool: 5
+  username: jeff
+  password: airjeff
 
 production:
   adapter: postgresql
