--- a/rails_frontend/Gemfile
+++ b/rails_frontend/Gemfile
@@ -1,5 +1,6 @@
 source 'https://rubygems.org'
 
+gem 'pg_search', :git => 'https://github.com/jmnsf/pg_search.git'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.6'
