--- a/django-backend/requirements.txt
+++ b/django-backend/requirements.txt
@@ -28,6 +28,7 @@ pycurl==7.43.0
 PyDispatcher==2.0.5
 Pygments==2.1.3
 pyOpenSSL==16.0.0
+python-dateutil==2.5.3
 pytz==2016.4
 queuelib==1.4.2
 redis==2.10.3
