--- a/rails_frontend/Gemfile
+++ b/rails_frontend/Gemfile
@@ -4,6 +4,9 @@ gem 'pg_search', :git => 'https://github.com/jmnsf/pg_search.git'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.6'
+
+# use bcrpty for password hashing
+gem 'bcrypt',               '3.1.7'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
 # Use SCSS for stylesheets
