--- a/rails_frontend/Gemfile
+++ b/rails_frontend/Gemfile
@@ -43,6 +43,7 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
   gem 'rspec-rails'
+  gem 'capybara', '>= 2.2'
 end
 
 group :development do
